--- a/mainPage.html
+++ b/mainPage.html
@@ -18,7 +18,9 @@
       <article>
         <h2>Put the h2 here</h2>
         <p>Put a paragraph about the page here</p>
-        <img src="#" alt="Text about the image" />
+        <aside>
+          <p>Less important information here</p>
+        </aside>
       </article>
     </main>
   </body>
