--- a/norwegian.html
+++ b/norwegian.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Norwegian Viking Culture</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Norwegian Viking History">
+    <meta name="keyworkds" content ="scandinavia, vikings, culture, history">
+    <meta name="author" content="Dikult105 group">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1">
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li>Norway</li>
-          <li>Sweeden</li>
-          <li>Denmark</li>
+          <li><a href="mainPage.html">Home</a></li>
+          <li><a href="norwegian.html">Norway</a></li>
+          <li><a href="swedish.html">Sweeden</a></li>
+          <li><a href="danish.html">Denmark</a></li>
         </ul>
       </nav>
-      <h1>Put the h1 here</h1>
+      <h1>Norwegian Viking Culture</h1>
     </header>
     <main>
       <article>
         <ul>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <img src="#" alt="picture of....">
+          </li>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <img src="#" alt="picture of....">
+          </li>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <img src="#" alt="picture of....">
+          </li>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <img src="#" alt="picture of....">
+          </li>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <img src="#" alt="picture of....">
+          </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
