complete vol1 mainPage

--- a/mainPage.html
+++ b/mainPage.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Scandinavian Viking History</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Scandinavian Viking History">
+    <meta name="keyworkds" content ="scandinavia, vikings, culture, history">
+    <meta name="author" content="Dikult105 group">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1">
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li>Norway</li>
-          <li>Sweeden</li>
-          <li>Denmark</li>
+          <li><a href="mainPage.html">Home</a></li>
+          <li><a href="norwegian.html">Norway</a></li>
+          <li><a href="swedish.html">Sweeden</a></li>
+          <li><a href="danish.html">Denmark</a></li>
         </ul>
       </nav>
       <h1>Put the h1 here</h1>
