changes to danish.html and swedish.html

--- a/swedish.html
+++ b/swedish.html
@@ -12,11 +12,17 @@
         </title>
     </head>
     <body>
-        <header>
-            <h1>
-                Swedish Viking Culture
-            </h1>
-        </header>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="mainPage.html">Home</a></li>
+            <li><a href="norwegian.html">Norway</a></li>
+            <li><a href="swedish.html">Sweeden</a></li>
+            <li><a href="danish.html">Denmark</a></li>
+          </ul>
+        </nav>
+        <h1>Swedish Viking Culture</h1>
+      </header>
         <main>
             <article>
                 <ul>
