--- a/danish.html
+++ b/danish.html
@@ -12,13 +12,19 @@
         </title>
     </head>
     <body>
-        <header>
-            <h1>
-                Danish Viking Culture
-            </h1>
-        </header>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="mainPage.html">Home</a></li>
+            <li><a href="norwegian.html">Norway</a></li>
+            <li><a href="swedish.html">Sweeden</a></li>
+            <li><a href="danish.html">Denmark</a></li>
+          </ul>
+        </nav>
+        <h1>Danish Viking Culture</h1>
+      </header>
         <main>
-            <article>   
+            <article>
                 <ul>
                     <li>
                         <h2>First date</h2>
