added 'year' to the list elements

--- a/norwegian.html
+++ b/norwegian.html
@@ -27,51 +27,73 @@
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
           <li>
             <h2>header for this li-element</h2>
             <p>some text</p>
+            <p>year</p>
+            <img src="#" alt="picture of....">
+          </li>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <p>year</p>
+            <img src="#" alt="picture of....">
+          </li>
+          <li>
+            <h2>header for this li-element</h2>
+            <p>some text</p>
+            <p>year</p>
             <img src="#" alt="picture of....">
           </li>
         </ul>
