Footer added to mainPage and norwegian pages

--- a/norwegian.html
+++ b/norwegian.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Norwegian Viking Culture</title>
     <meta charset="UTF-8">
@@ -101,7 +101,7 @@
     </main>
     <footer>
       <p>
-        
+
       </p>
     </footer>
   </body>
