html basic design

--- a/mainPage.html
+++ b/mainPage.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <ul id="navId">
           <li><a href="mainPage.html">Home</a></li>
           <li><a href="norwegian.html">Norway</a></li>
           <li><a href="swedish.html">Sweeden</a></li>
