added some text in main page and swedish page

--- a/mainPage.html
+++ b/mainPage.html
@@ -22,6 +22,15 @@
       <h1>Put the h1 here</h1>
     </header>
     <main>
+      <p>
+          Today we refer to Viking Age Scandinavians generally as Vikings as
+          though they were one group. But the people known as Vikings weren’t an
+          entirely homogeneous mass of people. There were Norwegian Vikings,
+          Danish Vikings and Swedish Vikings (We won’t have a separate category
+          for the Icelanders since they were originally Norwegian, after all,
+          and didn’t really go Viking like their counterparts eastward did, they
+          also developed a more settled society.
+      </p>
       <article>
         <h2>Put the h2 here</h2>
         <p>Put a paragraph about the page here</p>
