Added swedish introduction

--- a/swedish.html
+++ b/swedish.html
@@ -35,6 +35,19 @@
                 of what is now Sweden (along with Denmark and Norway) such as
                 Ragnar Lothbrok or Björn Ironside (both allegedly belonging to
                 the Royal House of Munsö) at certain times.
+
+                The Swedes, then known as Varangians, or Rus. They are very
+                interesting because out of the three they were the ones who
+                stayed true to their pagan ways for the longest. (until early
+                12th century). They were poised to discover and pillage new
+                lands in the east along the Volga and Dnieper rivers. Their
+                expeditions, however, were of a different sort than the Danes
+                and Norwegians in the west. They were excellent explorers and
+                tradesmen, but simply not as violent as the others (in relative
+                terms, of course they terrorized many primitives along the
+                Baltic) The goal of the Rus was primarily to trade (or so we
+                think). They established long trade routes to the middle east
+                and around the Black Sea.
             </p>
             <ul>
                 <li>
