max-width on the timelime

--- a/danish.html
+++ b/danish.html
@@ -42,8 +42,15 @@
             />
           </li>
           <li>
-            <p class="historicalParagraph">Some text about the history</p>
-            <h2>Second date</h2>
+            <p class="historicalParagraph">
+              <a
+                href="https://www.historyextra.com/period/viking/key-viking-dates-lindisfarne-raid-danelaw-swein-forkbeard-harald-hardrada-stamford-bridge/"
+                >The great heathen army raids in England. This is the first raid
+                of the heathen army and is a turningpoint in the relationship
+                between the vikings and England.
+              </a>
+            </p>
+            <h2>865</h2>
             <img
               src="images/viking.jpg"
               alt="Second year image"
@@ -53,7 +60,7 @@
           </li>
           <li>
             <p class="historicalParagraph">Some text about the history</p>
-            <h2>Third date</h2>
+            <h2>866</h2>
             <img
               src="images/viking.jpg"
               alt="Third year image"
@@ -62,8 +69,8 @@
             />
           </li>
           <li>
-            <p class="historicalParagraph">Some text about the history</p>
-            <h2>Fourh date</h2>
+            <p class="historicalParagraph">By the</p>
+            <h2>870</h2>
             <img
               src="images/viking.jpg"
               alt="Fourh year image"
