added swedish map and first age

--- a/swedish.html
+++ b/swedish.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <article>
-            <p>
+            <p class='historicalParagraph'>
                 In the time of the Viking Age Sweden was fragmented into many
                 petty kingdoms (also known as earldoms) ruled each by a local
                 chieftain, although, according to semi-legendary history, there
@@ -51,27 +51,29 @@
             </p>
             <ul>
                 <li>
-                    <p>Some text about the history</p>
-                    <h2>First date</h2>
-                    <img src="images/viking.jpg" alt="first year image" width="200px" height="150px">
+                    <p class='historicalParagraph'>In this period Sweeden was parted into several tribes and
+                    their districts are still partly indicated by the present
+                    divisions of the country.</p>
+                    <h2>700 A.C</h2>
+                    <img src="images/scandinavian_map.jpg" alt="first year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p>Some text about the history</p>
+                    <p class='historicalParagraph'>Some text about the history</p>
                     <h2>Second date</h2>
                     <img src="images/viking.jpg" alt="Second year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p>Some text about the history</p>
+                    <p class='historicalParagraph'>Some text about the history</p>
                     <h2>Third date</h2>
                     <img src="images/viking.jpg" alt="Third year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p>Some text about the history</p>
+                    <p class='historicalParagraph'>Some text about the history</p>
                     <h2>Fourh date</h2>
                     <img src="images/viking.jpg" alt="Fourh year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p>Some text about the history</p>
+                    <p class='historicalParagraph'>Some text about the history</p>
                     <h2>Fith date</h2>
                     <img src="images/viking.jpg" alt="Fith year image" width="200px" height="150px">
                 </li>
