added historical information danish

--- a/danish.html
+++ b/danish.html
@@ -59,7 +59,9 @@
             />
           </li>
           <li>
-            <p class="historicalParagraph">Some text about the history</p>
+            <p class="historicalParagraph">
+              Viking forces from the great heathen forces conquerers York
+            </p>
             <h2>866</h2>
             <img
               src="images/viking.jpg"
@@ -69,7 +71,10 @@
             />
           </li>
           <li>
-            <p class="historicalParagraph">By the</p>
+            <p class="historicalParagraph">
+              Within the 870s the Vikings had conquered most of north-east
+              England
+            </p>
             <h2>870</h2>
             <img
               src="images/viking.jpg"
