added some style to <p>

--- a/swedish.html
+++ b/swedish.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <article>
-            <p class='historicalParagraph'>
+            <p id='intro_text'>
                 In the time of the Viking Age Sweden was fragmented into many
                 petty kingdoms (also known as earldoms) ruled each by a local
                 chieftain, although, according to semi-legendary history, there
