added colors need review

--- a/swedish.html
+++ b/swedish.html
@@ -33,8 +33,8 @@
                 chieftain, although, according to semi-legendary history, there
                 might have been renowned monarchs who ruled parts of the realms
                 of what is now Sweden (along with Denmark and Norway) such as
-                Ragnar Lothbrok or Björn Ironside (both allegedly belonging to
-                the Royal House of Munsö) at certain times.
+                Ragnar Lothbrok or Bjorn Ironside (both allegedly belonging to
+                the Royal House of Munso) at certain times.
 
                 The Swedes, then known as Varangians, or Rus. They are very
                 interesting because out of the three they were the ones who
