Added some style

--- a/mainPage.html
+++ b/mainPage.html
@@ -19,10 +19,10 @@
           <li><a href="danish.html">Denmark</a></li>
         </ul>
       </nav>
-      <h1>Put the h1 here</h1>
+      <h1>Vikings: An Historical Review</h1>
     </header>
     <main>
-      <p>
+      <p id="intro_text">
           Today we refer to Viking Age Scandinavians generally as Vikings as
           though they were one group. But the people known as Vikings weren’t an
           entirely homogeneous mass of people. There were Norwegian Vikings,
