added swedish info and css style

--- a/swedish.html
+++ b/swedish.html
@@ -38,8 +38,8 @@
 
                 The Swedes, then known as Varangians, or Rus. They are very
                 interesting because out of the three they were the ones who
-                stayed true to their pagan ways for the longest. (until early
-                12th century). They were poised to discover and pillage new
+                stayed true to their pagan ways for the longest. 
+                They were poised to discover and pillage new
                 lands in the east along the Volga and Dnieper rivers. Their
                 expeditions, however, were of a different sort than the Danes
                 and Norwegians in the west. They were excellent explorers and
@@ -58,24 +58,44 @@
                     <img src="images/scandinavian_map.jpg" alt="first year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p class='historicalParagraph'>Some text about the history</p>
-                    <h2>Second date</h2>
-                    <img src="images/viking.jpg" alt="Second year image" width="200px" height="150px">
+                    <p class='historicalParagraph'>Swedish Vikings also
+                    controlled trade across the Baltic; and it was for this
+                    activity that Birka, generally regarded as Sweden’s oldest
+                    town, was founded Swedish Vikings took part in
+                    raids against western Europe as well.</p>
+                    <h2>800 A.C</h2>
+                    <img src="images/viking_ship.jpg" alt="Third year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p class='historicalParagraph'>Some text about the history</p>
-                    <h2>Third date</h2>
-                    <img src="images/viking.jpg" alt="Third year image" width="200px" height="150px">
+                    <p class='historicalParagraph'>The goal of the Rus was primarily to trade (or so we think). 
+                        They established long trade routes to the middle
+                         east and around the Black Sea. To this day, why this event occurred is unclear, 
+                         but most historians believe this was a capitulation by the Slavs to years of raids.</p>
+                    <h2>900 A.C</h2>
+                    <img src="images/viking_trade_routes.jpg" alt="Second year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p class='historicalParagraph'>Some text about the history</p>
-                    <h2>Fourh date</h2>
-                    <img src="images/viking.jpg" alt="Fourh year image" width="200px" height="150px">
+                    <p class='historicalParagraph'>The control of the Russian
+                    market began to slip from Swedish hands into those of
+                    Frisian, German, and Gotland merchants.</p>
+                    <h2>1000 A.C</h2>
+                    <img src="images/viking_market.jpg" alt="Fourh year image" width="200px" height="150px">
                 </li>
                 <li>
-                    <p class='historicalParagraph'>Some text about the history</p>
-                    <h2>Fith date</h2>
-                    <img src="images/viking.jpg" alt="Fith year image" width="200px" height="150px">
+                    <p class='historicalParagraph'>Sverker, a member
+                    of a magnate family from Ostergotland, was acknowledged as
+                    king, and this province now became the political centre of
+                    Sweden.</p>
+                    <h2>1130 A.C</h2>
+                    <img src="images/viking_king.jpg" alt="Fith year image" width="200px" height="150px">
+                </li>
+                <li>
+                    <p class='historicalParagraph'>Some of runic inscriptions were founded in England
+                        belong to the last phase of vikings age. What proves that vikings made raids 
+                        into England even preferring go to the east.
+                    </p>
+                    <h2>1150 A.C</h2>
+                    <img src="images/sweedish_rune.jpg" alt="Fith year image" width="200px" height="150px">
                 </li>
             </ul>
         </article>
