--- a/danish.html
+++ b/danish.html
@@ -10,6 +10,8 @@
     <title>
       Danish Viking Culture
     </title>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noarchive" />
   </head>
   <body>
     <header>
@@ -33,7 +35,7 @@
                 >The danish viking era started in the late 8th century.</a
               >
             </p>
-            <h2>800</h2>
+            <h2>800 A.C</h2>
             <img
               src="images/viking.jpg"
               alt="first year image"
@@ -50,7 +52,7 @@
                 between the vikings and England.
               </a>
             </p>
-            <h2>865</h2>
+            <h2>865 A.C</h2>
             <img
               src="images/viking.jpg"
               alt="Second year image"
@@ -62,7 +64,7 @@
             <p class="historicalParagraph">
               Viking forces from the great heathen forces conquerers York
             </p>
-            <h2>866</h2>
+            <h2>866 A.C</h2>
             <img
               src="images/viking.jpg"
               alt="Third year image"
@@ -75,7 +77,7 @@
               Within the 870s the Vikings had conquered most of north-east
               England
             </p>
-            <h2>870</h2>
+            <h2>870 A.C</h2>
             <img
               src="images/viking.jpg"
               alt="Fourh year image"
