--- a/mainPage.html
+++ b/mainPage.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <title>Scandinavian Viking History</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Scandinavian Viking History">
-    <meta name="keyworkds" content ="scandinavia, vikings, culture, history">
-    <meta name="author" content="Dikult105 group">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1">
+    <meta charset="UTF-8" />
+    <meta name="description" content="Scandinavian Viking History" />
+    <meta name="keyworkds" content="scandinavia, vikings, culture, history" />
+    <meta name="author" content="Dikult105 group" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noarchive" />
   </head>
   <body>
     <header>
@@ -23,13 +25,13 @@
     </header>
     <main>
       <p id="intro_text">
-          Today we refer to Viking Age Scandinavians generally as Vikings as
-          though they were one group. But the people known as Vikings weren’t an
-          entirely homogeneous mass of people. There were Norwegian Vikings,
-          Danish Vikings and Swedish Vikings (We won’t have a separate category
-          for the Icelanders since they were originally Norwegian, after all,
-          and didn’t really go Viking like their counterparts eastward did, they
-          also developed a more settled society.
+        Today we refer to Viking Age Scandinavians generally as Vikings as
+        though they were one group. But the people known as Vikings weren’t an
+        entirely homogeneous mass of people. There were Norwegian Vikings,
+        Danish Vikings and Swedish Vikings (We won’t have a separate category
+        for the Icelanders since they were originally Norwegian, after all, and
+        didn’t really go Viking like their counterparts eastward did, they also
+        developed a more settled society.
       </p>
       <article>
         <h2>Put the h2 here</h2>
