--- a/norwegian.html
+++ b/norwegian.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <title>Norwegian Viking Culture</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Norwegian Viking History">
-    <meta name="keyworkds" content ="scandinavia, vikings, culture, history">
-    <meta name="author" content="Dikult105 group">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1">
+    <meta charset="UTF-8" />
+    <meta name="description" content="Norwegian Viking History" />
+    <meta name="keyworkds" content="scandinavia, vikings, culture, history" />
+    <meta name="author" content="Dikult105 group" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noarchive" />
   </head>
   <body>
     <header>
-	
       <nav>
         <ul id="navId">
           <li><a href="mainPage.html">Home</a></li>
@@ -20,8 +21,7 @@
           <li><a href="danish.html">Denmark</a></li>
         </ul>
       </nav>
-	  <h1>Norwegian Viking Culture</h1>
-      
+      <h1>Norwegian Viking Culture</h1>
     </header>
     <main>
       <article>
@@ -29,70 +29,128 @@
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
           <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...."width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
-          <li>            
+          <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
-          <li>    
+          <li>
             <p>some text</p>
             <h2>year</h2>
-            <img src="images/viking.jpg" alt="picture of...." width="200px" height="150px">
+            <img
+              src="images/viking.jpg"
+              alt="picture of...."
+              width="200px"
+              height="150px"
+            />
           </li>
         </ul>
       </article>
     </main>
     <footer>
-      <p>
-
-      </p>
+      <p></p>
     </footer>
   </body>
 </html>
