--- a/swedish.html
+++ b/swedish.html
@@ -1,115 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Swedish Viking Culture">
-    <meta name="keyworkds" content="swedish, vikings, culture, history">
-    <meta name="author" content="Dikult105 group">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Swedish Viking Culture" />
+    <meta name="keyworkds" content="swedish, vikings, culture, history" />
+    <meta name="author" content="Dikult105 group" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
     <title>
-        Swedish Viking Culture
+      Swedish Viking Culture
     </title>
-</head>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noarchive" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul id="navId">
-                <li><a href="mainPage.html">Home</a></li>
-                <li><a href="norwegian.html">Norway</a></li>
-                <li><a href="swedish.html">Sweeden</a></li>
-                <li><a href="danish.html">Denmark</a></li>
-            </ul>
-        </nav>
-        <h1>Swedish Viking Culture</h1>
+      <nav>
+        <ul id="navId">
+          <li><a href="mainPage.html">Home</a></li>
+          <li><a href="norwegian.html">Norway</a></li>
+          <li><a href="swedish.html">Sweeden</a></li>
+          <li><a href="danish.html">Denmark</a></li>
+        </ul>
+      </nav>
+      <h1>Swedish Viking Culture</h1>
     </header>
     <main>
-        <article>
-            <p id='intro_text'>
-                In the time of the Viking Age Sweden was fragmented into many
-                petty kingdoms (also known as earldoms) ruled each by a local
-                chieftain, although, according to semi-legendary history, there
-                might have been renowned monarchs who ruled parts of the realms
-                of what is now Sweden (along with Denmark and Norway) such as
-                Ragnar Lothbrok or Bjorn Ironside (both allegedly belonging to
-                the Royal House of Munso) at certain times.
-
-                The Swedes, then known as Varangians, or Rus. They are very
-                interesting because out of the three they were the ones who
-                stayed true to their pagan ways for the longest. 
-                They were poised to discover and pillage new
-                lands in the east along the Volga and Dnieper rivers. Their
-                expeditions, however, were of a different sort than the Danes
-                and Norwegians in the west. They were excellent explorers and
-                tradesmen, but simply not as violent as the others (in relative
-                terms, of course they terrorized many primitives along the
-                Baltic) The goal of the Rus was primarily to trade (or so we
-                think). They established long trade routes to the middle east
-                and around the Black Sea.
+      <article>
+        <p id="intro_text">
+          In the time of the Viking Age Sweden was fragmented into many petty
+          kingdoms (also known as earldoms) ruled each by a local chieftain,
+          although, according to semi-legendary history, there might have been
+          renowned monarchs who ruled parts of the realms of what is now Sweden
+          (along with Denmark and Norway) such as Ragnar Lothbrok or Bjorn
+          Ironside (both allegedly belonging to the Royal House of Munso) at
+          certain times. The Swedes, then known as Varangians, or Rus. They are
+          very interesting because out of the three they were the ones who
+          stayed true to their pagan ways for the longest. They were poised to
+          discover and pillage new lands in the east along the Volga and Dnieper
+          rivers. Their expeditions, however, were of a different sort than the
+          Danes and Norwegians in the west. They were excellent explorers and
+          tradesmen, but simply not as violent as the others (in relative terms,
+          of course they terrorized many primitives along the Baltic) The goal
+          of the Rus was primarily to trade (or so we think). They established
+          long trade routes to the middle east and around the Black Sea.
+        </p>
+        <ul>
+          <li>
+            <p class="historicalParagraph">
+              In this period Sweeden was parted into several tribes and their
+              districts are still partly indicated by the present divisions of
+              the country.
             </p>
-            <ul>
-                <li>
-                    <p class='historicalParagraph'>In this period Sweeden was parted into several tribes and
-                    their districts are still partly indicated by the present
-                    divisions of the country.</p>
-                    <h2>700 A.C</h2>
-                    <img src="images/scandinavian_map.jpg" alt="first year image" width="200px" height="150px">
-                </li>
-                <li>
-                    <p class='historicalParagraph'>Swedish Vikings also
-                    controlled trade across the Baltic; and it was for this
-                    activity that Birka, generally regarded as Sweden’s oldest
-                    town, was founded Swedish Vikings took part in
-                    raids against western Europe as well.</p>
-                    <h2>800 A.C</h2>
-                    <img src="images/viking_ship.jpg" alt="Third year image" width="200px" height="150px">
-                </li>
-                <li>
-                    <p class='historicalParagraph'>The goal of the Rus was primarily to trade (or so we think). 
-                        They established long trade routes to the middle
-                         east and around the Black Sea. To this day, why this event occurred is unclear, 
-                         but most historians believe this was a capitulation by the Slavs to years of raids.</p>
-                    <h2>900 A.C</h2>
-                    <img src="images/viking_trade_routes.jpg" alt="Second year image" width="200px" height="150px">
-                </li>
-                <li>
-                    <p class='historicalParagraph'>The control of the Russian
-                    market began to slip from Swedish hands into those of
-                    Frisian, German, and Gotland merchants.</p>
-                    <h2>1000 A.C</h2>
-                    <img src="images/viking_market.jpg" alt="Fourh year image" width="200px" height="150px">
-                </li>
-                <li>
-                    <p class='historicalParagraph'>Sverker, a member
-                    of a magnate family from Ostergotland, was acknowledged as
-                    king, and this province now became the political centre of
-                    Sweden.</p>
-                    <h2>1130 A.C</h2>
-                    <img src="images/viking_king.jpg" alt="Fith year image" width="200px" height="150px">
-                </li>
-                <li>
-                    <p class='historicalParagraph'>Some of runic inscriptions were founded in England
-                        belong to the last phase of vikings age. What proves that vikings made raids 
-                        into England even preferring go to the east.
-                    </p>
-                    <h2>1150 A.C</h2>
-                    <img src="images/sweedish_rune.jpg" alt="Fith year image" width="200px" height="150px">
-                </li>
-            </ul>
-        </article>
-        <aside>
-            <p>
-                Some content less important.
+            <h2>700 A.C</h2>
+            <img
+              src="images/scandinavian_map.jpg"
+              alt="first year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              Swedish Vikings also controlled trade across the Baltic; and it
+              was for this activity that Birka, generally regarded as Sweden’s
+              oldest town, was founded Swedish Vikings took part in raids
+              against western Europe as well.
             </p>
-        </aside>
+            <h2>800 A.C</h2>
+            <img
+              src="images/viking_ship.jpg"
+              alt="Third year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              The goal of the Rus was primarily to trade (or so we think). They
+              established long trade routes to the middle east and around the
+              Black Sea. To this day, why this event occurred is unclear, but
+              most historians believe this was a capitulation by the Slavs to
+              years of raids.
+            </p>
+            <h2>900 A.C</h2>
+            <img
+              src="images/viking_trade_routes.jpg"
+              alt="Second year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              The control of the Russian market began to slip from Swedish hands
+              into those of Frisian, German, and Gotland merchants.
+            </p>
+            <h2>1000 A.C</h2>
+            <img
+              src="images/viking_market.jpg"
+              alt="Fourh year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              Sverker, a member of a magnate family from Ostergotland, was
+              acknowledged as king, and this province now became the political
+              centre of Sweden.
+            </p>
+            <h2>1130 A.C</h2>
+            <img
+              src="images/viking_king.jpg"
+              alt="Fith year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              Some of runic inscriptions were founded in England belong to the
+              last phase of vikings age. What proves that vikings made raids
+              into England even preferring go to the east.
+            </p>
+            <h2>1150 A.C</h2>
+            <img
+              src="images/sweedish_rune.jpg"
+              alt="Fith year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+        </ul>
+      </article>
+      <aside>
+        <p>
+          Some content less important.
+        </p>
+      </aside>
     </main>
     <footer>
-        <p>
-            <a href="#">about us</a>
-        </p>
+      <p>
+        <a href="#">about us</a>
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
