--- a/swedish.html
+++ b/swedish.html
@@ -1,6 +1,8 @@
+<!--
+    This part was made for Julio Reyes
+-->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Swedish Viking Culture">
